tests/neg/i16888.scala
//> using options -explain

def test = summon[scala.quoted.Quotes] // error
